logs/offboard_pkg/build.make.498.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightCircle()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:303:19: error: redeclaration of ‘size_t k’
  303 |     static size_t k = 0;
      |                   ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:286:19: note: ‘size_t k’ previously declared here
  286 |     static size_t k = 0;
      |                   ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
